--- a/.github/workflows/shelby_discord_build_deploy.yaml
+++ b/.github/workflows/shelby_discord_build_deploy.yaml
@@ -11,7 +11,7 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}
 
         DISCORD_TOKEN: ${{ secrets.SHELBY_SPRITE_DISCORD_TOKEN }}
         DISCORD_CHANNEL_ID: ${{ secrets.SHELBY_SPRITE_DISCORD_CHANNEL_ID }}
@@ -48,7 +48,7 @@ jobs:
       with:
         registry: docker.io 
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
