--- a/.github/workflows/tatum_slack_push_to_docker.yaml
+++ b/.github/workflows/tatum_slack_push_to_docker.yaml
@@ -11,7 +11,7 @@ jobs:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
         SLACK_BOT_TOKEN: ${{ secrets.TATUM_SPRITE_SLACK_BOT_TOKEN }}
         SLACK_APP_TOKEN: ${{ secrets.TATUM_SPRITE_SLACK_APP_TOKEN }}
