--- a/.github/workflows/tatum_slack_push_to_docker.yaml
+++ b/.github/workflows/tatum_slack_push_to_docker.yaml
@@ -19,6 +19,7 @@ jobs:
         WORKLOAD_NAME: tatum-sprite
         WORKLOAD_SLUG: slack-bot
         PINECONE_INDEX: shelby-as-a-service
+        MAX_RESPONSE_TOKENS: 2000
 
     steps:
     - name: Checkout code
@@ -48,7 +49,7 @@ jobs:
       with:
         registry: docker.io 
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        password: ${{ secrets.DOCKER_TOKEN }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@v4
