--- a/.github/workflows/tatum_discord_build_deploy.yaml
+++ b/.github/workflows/tatum_discord_build_deploy.yaml
@@ -19,7 +19,8 @@ jobs:
         WORKLOAD_NAME: tatum-sprite
         WORKLOAD_SLUG: discord-bot
         PINECONE_INDEX: shelby-as-a-service
-        MAX_RESPONSE_TOKENS: 1500
+        MAX_RESPONSE_TOKENS: 600
+        MAX_DOCS_USED: 3
 
     steps:
     - name: Checkout code
