--- a/.github/workflows/tatum_discord_build_deploy.yaml
+++ b/.github/workflows/tatum_discord_build_deploy.yaml
@@ -17,10 +17,10 @@ jobs:
         DISCORD_CHANNEL_ID: ${{ secrets.TATUM_SPRITE_DISCORD_CHANNEL_ID }}
         
         WORKLOAD_NAME: tatum-discord-sprite
-        WORKLOAD_SLUG: discord-sprite
+        WORKLOAD_SLUG: tatum-discord-sprite
         PINECONE_INDEX: shelby-as-a-service
         NAMESPACES: '{"tatum": "blockchain and web3"}'
-        MAX_RESPONSE_TOKENS: 400
+        MAX_RESPONSE_TOKENS: 300
         MAX_DOCS_USED: 3
 
     steps:
