--- a/.github/workflows/tatum_slack_push_to_docker.yaml
+++ b/.github/workflows/tatum_slack_push_to_docker.yaml
@@ -17,7 +17,7 @@ jobs:
         SLACK_APP_TOKEN: ${{ secrets.TATUM_SPRITE_SLACK_APP_TOKEN }}
 
         WORKLOAD_NAME: tatum-slack-sprite
-        WORKLOAD_SLUG: slack-sprite
+        WORKLOAD_SLUG: tatum-slack-sprite
         PINECONE_INDEX: shelby-as-a-service
         NAMESPACES: '{"tatum": "blockchain and web3"}'
 
