Updated namespaces in script

--- a/.github/workflows/shelby_discord_build_deploy.yaml
+++ b/.github/workflows/shelby_discord_build_deploy.yaml
@@ -20,6 +20,7 @@ jobs:
         WORKLOAD_SLUG: shelby-discord-sprite
         PINECONE_INDEX: shelby-as-a-service
         NAMESPACES: '{"tatum": "blockchain and web3", "deepgram": "ai speech to text services"}'
+        NAMESPACES: '{"tatum": "blockchain and web3", "deepgram": "ai speech to text services"}'
         MAX_RESPONSE_TOKENS: 300
         MAX_DOCS_USED: 3
 
