Changes to discord bot, logging, and topic selection

--- a/app/discord/Dockerfile
+++ b/app/discord/Dockerfile
@@ -1,16 +1,16 @@
 # Use an official Python runtime as a parent image
 FROM python:3-slim-buster
 
-# Set the working directory in the container to /app
-WORKDIR /bots
+# Set the working directory in the container to /shelby-as-a-service
+WORKDIR /shelby-as-a-service
 
-# Copy all files and folders from the bots directory
+# Copy all files and folders from the root directory
 COPY ./ ./ 
 
 # Install python packages
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "app/discord_bot.py"]
+CMD ["python", "app/discord_sprite.py"]
 
 
 
