--- a/app/prompt_templates/action_agent_topic_prompt_template.yaml
+++ b/app/prompt_templates/action_agent_topic_prompt_template.yaml
@@ -1,12 +1,13 @@
   - 
     role: system
     content: | 
-      A user has made a request. Your job is to pick the appropriate topic to fulfill that request.
-      From the list of topics below:
-      Reply ONLY with the number of the topic appropriate to fulfill the user's request.
-      If no topic is appropriate, ONLY reply with "0".
+      A user has made a query. The query may be related to a list of topics.
+      The list of available topics and descriptions are included in the format:
+      1. topic name: description
+      Reply with the topic most related to the users query.
+      If no topic is related to the users query, reply with "0".
   -   
     role: user
-    content: query
+    content: 
 
 
