--- a/app/slack/Dockerfile
+++ b/app/slack/Dockerfile
@@ -1,8 +1,8 @@
 # Use an official Python runtime as a parent image
 FROM python:3-slim-buster
 
-# Set the working directory in the container to /app
-WORKDIR /bots
+# Set the working directory in the container to /shelby-as-a-service
+WORKDIR /shelby-as-a-service
 
 # Copy all files and folders from the bots directory
 COPY ./ ./ 
@@ -10,6 +10,6 @@ COPY ./ ./
 # Install python packages
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD ["python", "app/slack_bot.py"]
+CMD ["python", "app/slack_sprite.py"]
 
 
