--- a/.github/workflows/shelby_discord_build_deploy.yaml
+++ b/.github/workflows/shelby_discord_build_deploy.yaml
@@ -1,69 +1,87 @@
-name: Shelby - Discord - Build and Deploy
+name: shelby_discord_build_deploy
+
+# Requried github secrets
+# STACKPATH_CLIENT_ID 
+# STACKPATH_API_CLIENT_SECRET
+# OPENAI_API_KEY
+# PINECONE_API_KEY
+# DOCKER_USERNAME
+# DOCKER_TOKEN
+# SHELBY_SPRITE_DISCORD_TOKEN
+# SHELBY_SPRITE_DISCORD_CHANNEL_ID
 
 on: workflow_dispatch
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    env:
-        STACKPATH_CLIENT_ID: ${{ secrets.STACKPATH_CLIENT_ID }}
-        STACKPATH_API_CLIENT_SECRET: ${{ secrets.STACKPATH_API_CLIENT_SECRET }}
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-        DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+    docker:
+        runs-on: ubuntu-latest
+        env:
+            STACKPATH_CLIENT_ID: ${{ secrets.STACKPATH_CLIENT_ID }}
+            STACKPATH_API_CLIENT_SECRET: ${{ secrets.STACKPATH_API_CLIENT_SECRET }}
+            OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+            PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+            DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+            DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+            DISCORD_TOKEN: ${{ secrets.SHELBY_SPRITE_DISCORD_TOKEN }}
+            DISCORD_CHANNEL_ID: ${{ secrets.SHELBY_SPRITE_DISCORD_CHANNEL_ID }}
+            WORKLOAD_NAME: shelby-discord-sprite
+            WORKLOAD_SLUG: shelby-discord-sprite
+            VECTORSTORE_INDEX: shelby-as-a-service
+            VECTORSTORE_NAMESPACES: '{"tatum": "blockchain and web3", "deepgram": "ai speech to text services"}'
 
-        DISCORD_TOKEN: ${{ secrets.SHELBY_SPRITE_DISCORD_TOKEN }}
-        DISCORD_CHANNEL_ID: ${{ secrets.SHELBY_SPRITE_DISCORD_CHANNEL_ID }}
+            ACTION_LLM_MODEL: gpt-4
+            QUERY_LLM_MODEL: gpt-4
+            VECTORSTORE_TOP_K: 3
+            OPENAI_TIMEOUT_SECONDS: 180.0
+            MAX_DOCS_TOKENS: 5000
+            MAX_DOCS_USED: 3
+            MAX_RESPONSE_TOKENS: 300
+            SELECT_OPERATIONID_LLM_MODEL: gpt-4
+            CREATE_FUNCTION_LLM_MODEL: gpt-4
+            POPULATE_FUNCTION_LLM_MODEL: gpt-4
+            TIKTOKEN_ENCODING_MODEL: text-embedding-ada-002
+            PROMPT_TEMPLATE_PATH: app/prompt_templates/
+            API_SPEC_PATH: data/minified_openAPI_specs/
+        steps:
+            - name: Checkout code
+            uses: actions/checkout@v3
 
-        WORKLOAD_NAME: shelby-discord-sprite
-        WORKLOAD_SLUG: shelby-discord-sprite
-        PINECONE_INDEX: shelby-as-a-service
-        NAMESPACES: '{"tatum": "blockchain and web3", "deepgram": "ai speech to text services"}'
-        MAX_RESPONSE_TOKENS: 300
-        MAX_DOCS_USED: 3
+            - name: Set up Python
+            uses: actions/setup-python@v2
+            with:
+                python-version: '3.10.11'
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+            - name: Cache pip dependencies
+            uses: actions/cache@v2
+            id: cache
+            with:
+                path: ~/.cache/pip
+                key: ${{  runner.os }}-pip-${{  hashFiles('**/requirements.txt') }}
+                restore-keys: |
+                ${{  runner.os }}-pip-
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10.11'
+            - name: Install dependencies
+            run: |
+                python -m pip install --upgrade pip
+                if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Cache pip dependencies
-      uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+            - name: Login to Docker registry
+            uses: docker/login-action@v2 
+            with:
+                registry: docker.io 
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{  secrets.DOCKER_TOKEN }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+            - name: Build and push Docker image
+            uses: docker/build-push-action@v4
+            with:
+                context: .
+                file: app/discord/Dockerfile
+                push: true
+                tags: shelbyjenkins/shelby-as-a-service:discord-latest
 
-    - name: Login to Docker registry
-      uses: docker/login-action@v2 
-      with:
-        registry: docker.io 
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+            - name: Add execute permissions to the script
+            run: chmod +x app/discord/stackpath_container_discord.py
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        file: app/discord/Dockerfile
-        push: true
-        tags: shelbyjenkins/shelby-as-a-service:discord-latest
-
-    - name: Add execute permissions to the script
-      run: chmod +x app/discord/stackpath_container_discord.py
-
-    - name: Run deployment script
-      run: app/discord/stackpath_container_discord.py
-      
+            - name: Run deployment script
+            run: app/discord/stackpath_container_discord.py
