--- a/.github/workflows/shelby_discord_build_deploy.yaml
+++ b/.github/workflows/shelby_discord_build_deploy.yaml
@@ -1,29 +1,27 @@
 name: shelby_discord_build_deploy
 
-# Requried github secrets
-# STACKPATH_CLIENT_ID 
-# STACKPATH_API_CLIENT_SECRET
-# OPENAI_API_KEY
-# PINECONE_API_KEY
-# DOCKER_USERNAME
-# DOCKER_TOKEN
-# SHELBY_SPRITE_DISCORD_TOKEN
-# SHELBY_SPRITE_DISCORD_CHANNEL_ID
-
 on: workflow_dispatch
 
 jobs:
     docker:
         runs-on: ubuntu-latest
         env:
+            # Required github secrets
             STACKPATH_CLIENT_ID: ${{ secrets.STACKPATH_CLIENT_ID }}
             STACKPATH_API_CLIENT_SECRET: ${{ secrets.STACKPATH_API_CLIENT_SECRET }}
             OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
             PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-            DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
             DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
             DISCORD_TOKEN: ${{ secrets.SHELBY_SPRITE_DISCORD_TOKEN }}
             DISCORD_CHANNEL_ID: ${{ secrets.SHELBY_SPRITE_DISCORD_CHANNEL_ID }}
+
+            DOCKER_USERNAME: shelbyjenkins
+            DOCKER_REGISTRY: docker.io/shelbyjenkins/shelby-as-a-service
+            DOCKER_IMAGE_PATH: shelbyjenkins/shelby-as-a-service:shelby-latest
+
+            STACKPATH_STACK_ID: shelby-stack-327b67
+
+            TYPE: discord
             WORKLOAD_NAME: shelby-discord-sprite
             WORKLOAD_SLUG: shelby-discord-sprite
             VECTORSTORE_INDEX: shelby-as-a-service
@@ -69,20 +67,20 @@ jobs:
             - name: Login to Docker registry
               uses: docker/login-action@v2 
               with:
-                  registry: docker.io 
-                  username: ${{ secrets.DOCKER_USERNAME }}
+                  registry: docker.io/shelbyjenkins/shelby-as-a-service
+                  username: shelbyjenkins
                   password: ${{  secrets.DOCKER_TOKEN }}
 
             - name: Build and push Docker image
               uses: docker/build-push-action@v4
               with:
                   context: .
-                  file: app/discord/Dockerfile
+                  file: app/deployment/discord/Dockerfile
                   push: true
-                  tags: shelbyjenkins/shelby-as-a-service:discord-latest
+                  tags: shelbyjenkins/shelby-as-a-service:shelby-latest
 
             - name: Add execute permissions to the script
-              run: chmod +x app/stackpath_container_discord.py
+              run: chmod +x deploy_stackpath_container.py
 
             - name: Run deployment script
-              run: app/stackpath_container_discord.py
+              run: deploy_stackpath_container.py
