--- a/.github/workflows/personal_discord_build_deploy.yaml
+++ b/.github/workflows/personal_discord_build_deploy.yaml
@@ -1,4 +1,4 @@
-name: shelby_discord_build_deploy
+name: personal_discord_build_deploy
 
 on: workflow_dispatch
 
@@ -12,18 +12,19 @@ jobs:
             OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
             PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
             DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
-            DISCORD_TOKEN: ${{ secrets.SHELBY_SPRITE_DISCORD_TOKEN }}
-            DISCORD_CHANNEL_ID: ${{ secrets.SHELBY_SPRITE_DISCORD_CHANNEL_ID }}
+            DISCORD_TOKEN: ${{ secrets.PERSONAL_SPRITE_DISCORD_TOKEN }}
+            DISCORD_CHANNEL_ID: ${{ secrets.PERSONAL_SPRITE_DISCORD_CHANNEL_ID }}
 
             DOCKER_USERNAME: shelbyjenkins
-            DOCKER_REGISTRY: docker.io/shelbyjenkins/shelby-as-a-service
-            DOCKER_IMAGE_PATH: shelbyjenkins/shelby-as-a-service:shelby-latest
+            DOCKER_REGISTRY: docker.io
+            DOCKER_SERVER: docker.io/shelbyjenkins/shelby-as-a-service
+            DOCKER_IMAGE_PATH: shelbyjenkins/shelby-as-a-service:personal-latest
 
             STACKPATH_STACK_ID: shelby-stack-327b67
 
             TYPE: discord
-            WORKLOAD_NAME: shelby-discord-sprite
-            WORKLOAD_SLUG: shelby-discord-sprite
+            WORKLOAD_NAME: personal-discord-sprite
+            WORKLOAD_SLUG: personal-discord-sprite
             VECTORSTORE_INDEX: shelby-as-a-service
             VECTORSTORE_NAMESPACES: '{"tatum": "blockchain and web3", "deepgram": "ai speech to text services"}'
 
@@ -67,7 +68,7 @@ jobs:
             - name: Login to Docker registry
               uses: docker/login-action@v2 
               with:
-                  registry: docker.io/shelbyjenkins/shelby-as-a-service
+                  registry: docker.io
                   username: shelbyjenkins
                   password: ${{  secrets.DOCKER_TOKEN }}
 
@@ -77,7 +78,7 @@ jobs:
                   context: .
                   file: app/deployment/discord/Dockerfile
                   push: true
-                  tags: shelbyjenkins/shelby-as-a-service:shelby-latest
+                  tags: shelbyjenkins/shelby-as-a-service:personal-latest
 
             - name: Add execute permissions to the script
               run: chmod +x deploy_stackpath_container.py
