--- a/.github/workflows/personal_discord_build_deploy.yaml
+++ b/.github/workflows/personal_discord_build_deploy.yaml
@@ -56,14 +56,14 @@ jobs:
               id: cache
               with:
                   path: ~/.cache/pip
-                  key: ${{  runner.os }}-pip-${{  hashFiles('**/requirements.txt') }}
+                  key: ${{  runner.os }}-pip-${{  hashFiles('**/app/deployment/discord/discord_requirements.txt') }}
                   restore-keys: |
                       ${{  runner.os }}-pip-
 
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+                  if [ -f app/deployment/discord/discord_requirements.txt ]; then pip install -r app/deployment/discord/discord_requirements.txt; fi
 
             - name: Login to Docker registry
               uses: docker/login-action@v2 
