--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,49 @@
-aiohttp
-aiosignal
-async-timeout
-attrs
-certifi
-charset-normalizer
-click
-dataclasses-json
-discord
-dnspython
-frozenlist
-greenlet
-idna
-joblib
-langchain
-loguru
-MarkupSafe
-marshmallow
-marshmallow-enum
-mmh3
-multidict
-mypy-extensions
-nltk
-numexpr
-numpy
-openai
-openapi-schema-pydantic
-packaging
-pinecone-client
-pipdeptree
-pydantic
-python-dateutil
-python-dotenv
-PyYAML
-regex
-requests
-six
-slack-bolt
-slack-sdk
-SQLAlchemy
-tenacity
-tiktoken
-tqdm
-typing-inspect
-typing_extensions
-urllib3
-wget
-yarl
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==3.2.0
+click==8.1.4
+dataclasses-json==0.5.9
+discord.py==2.3.1
+dnspython==2.3.0
+frozenlist==1.3.3
+greenlet==2.0.2
+idna==3.4
+joblib==1.3.1
+langchain==0.0.228
+langchainplus-sdk==0.0.20
+loguru==0.7.0
+MarkupSafe==2.1.3
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
+mmh3==4.0.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+nltk==3.8.1
+numexpr==2.8.4
+numpy==1.25.1
+openai==0.27.8
+openapi-schema-pydantic==1.2.4
+packaging==23.1
+pinecone-client==2.2.2
+pipdeptree==2.9.4
+pydantic==1.10.11
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+PyYAML==6.0
+regex==2023.6.3
+requests==2.31.0
+six==1.16.0
+slack-bolt==1.18.0
+slack-sdk==3.21.3
+SQLAlchemy==2.0.18
+tenacity==8.2.2
+tiktoken==0.4.0
+tqdm==4.65.0
+typing-inspect==0.9.0
+typing_extensions==4.7.1
+urllib3==2.0.3
+wget==3.2
+yarl==1.9.2
