--- a/.github/workflows/personal_slack_build_deploy.yaml
+++ b/.github/workflows/personal_slack_build_deploy.yaml
@@ -1,4 +1,4 @@
-name: personal_discord_build_deploy
+name: personal_slack_build_deploy
 
 on: workflow_dispatch
 
@@ -13,19 +13,19 @@ jobs:
             PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
             DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
 
-            DISCORD_TOKEN: ${{ secrets.PERSONAL_SPRITE_DISCORD_TOKEN }}
-            DISCORD_CHANNEL_ID: ${{ secrets.PERSONAL_SPRITE_DISCORD_CHANNEL_ID }}
+            SLACK_BOT_TOKEN: ${{ secrets.PERSONAL_SPRITE_SLACK_BOT_TOKEN }}
+            SLACK_APP_TOKEN: ${{ secrets.PERSONAL_SPRITE_SLACK_APP_TOKEN }}
 
             DOCKER_USERNAME: shelbyjenkins
             DOCKER_REGISTRY: docker.io
             DOCKER_SERVER: docker.io/shelbyjenkins/shelby-as-a-service
-            DOCKER_IMAGE_PATH: shelbyjenkins/shelby-as-a-service:discord-latest
+            DOCKER_IMAGE_PATH: shelbyjenkins/shelby-as-a-service:slack-latest
 
             STACKPATH_STACK_ID: shelby-stack-327b67
 
-            TYPE: discord
-            WORKLOAD_NAME: shelby-as-a-service-personal-discord-sprite
-            WORKLOAD_SLUG: personal-discord-sprite
+            TYPE: slack
+            WORKLOAD_NAME: shelby-as-a-service-personal-slack-sprite
+            WORKLOAD_SLUG: personal-slack-sprite
             VECTORSTORE_INDEX: shelby-as-a-service
             VECTORSTORE_NAMESPACES: '{"tatum": "blockchain and web3", "deepgram": "ai speech to text services"}'
 
@@ -57,14 +57,14 @@ jobs:
               id: cache
               with:
                   path: ~/.cache/pip
-                  key: ${{  runner.os }}-pip-${{  hashFiles('**/app/deployment/discord/discord_requirements.txt') }}
+                  key: ${{  runner.os }}-pip-${{  hashFiles('**/app/deployment/slack/slack_requirements.txt') }}
                   restore-keys: |
                       ${{  runner.os }}-pip-
 
             - name: Install dependencies
               run: |
                   python -m pip install --upgrade pip
-                  if [ -f app/deployment/discord/discord_requirements.txt ]; then pip install -r app/deployment/discord/discord_requirements.txt; fi
+                  if [ -f app/deployment/slack/slack_requirements.txt ]; then pip install -r app/deployment/slack/slack_requirements.txt; fi
 
             - name: Login to Docker registry
               uses: docker/login-action@v2 
@@ -77,9 +77,9 @@ jobs:
               uses: docker/build-push-action@v4
               with:
                   context: .
-                  file: app/deployment/discord/Dockerfile
+                  file: app/deployment/slack/Dockerfile
                   push: true
-                  tags: shelbyjenkins/shelby-as-a-service:discord-latest
+                  tags: shelbyjenkins/shelby-as-a-service:slack-latest
 
             - name: Add execute permissions to the script
               run: chmod +x app/deployment/deploy_stackpath_container.py
