--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+git+https://github.com/ShelbyJenkins/langchain
+git+https://github.com/ShelbyJenkins/LLM-OpenAPI-minifier
 aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
@@ -12,7 +14,6 @@ frozenlist==1.3.3
 greenlet==2.0.2
 idna==3.4
 joblib==1.3.1
-langchain==0.0.228
 langchainplus-sdk==0.0.20
 loguru==0.7.0
 marshmallow==3.19.0
