--- a/.github/workflows/personal_discord_build_deploy.yaml
+++ b/.github/workflows/personal_discord_build_deploy.yaml
@@ -33,7 +33,7 @@ jobs:
             DEPLOYMENT_TARGET: discord
             WORKLOAD_NAME: shelby-as-a-service-personal-discord-sprite
             WORKLOAD_SLUG: personal-discord-sprite
-            VECTORSTORE_NAMESPACES: '{"deepgram": "ai speech to text services", "tatum": "blockchain and web3", "stackpath": "cloud infrastructure such as CDN, WAF, VMs, serverless javascript, and containers"}'               
+            VECTORSTORE_NAMESPACES: '{"deepgram": "Advanced AI services including, speech-to-text, translation, and sentiment analysis.", "tatum": "blockchain and web3 infrastructure and services including JS and C# SDKs with support for 70 networks.", "stackpath": "cloud infrastructure such as CDN, WAF, VMs, serverless javascript, and containers"}'               
 
             # Configs to be loaded into container env to overide config_agent
             VECTORSTORE_INDEX: shelby-as-a-service
