--- a/app/prompt_templates/API_agent_select_operationID_prompt_template.yaml
+++ b/app/prompt_templates/API_agent_select_operationID_prompt_template.yaml
@@ -20,6 +20,6 @@
       {{doc_number_digit}}\n{{doc_number_digit}}\n{{doc_number_digit}}
   -   
     role: user
-    content: query
+    content: 
 
 
