--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
 	"image": "docker.io/library/python:3.10.11-slim-buster",
 	// "forwardPorts": [8000],
-	"postCreateCommand": "apt-get update && apt-get install -y $(cat installed_packages.txt) && pip install -r requirements.txt",
+	"postCreateCommand": "apt-get update && apt-get install -y git && pip install -r requirements.txt",
     "customizations": {
 		"vscode": {
 			"extensions": [
