--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,20 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/universal
 {
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"remoteUser": "root",
 	"image": "docker.io/library/python:3.10.11-slim-buster",
 	// "forwardPorts": [8000],
-	"postCreateCommand": "apt-get update && apt-get install -y git && pip install -r requirements.txt",
+	"postCreateCommand": "apt-get update && apt-get install -y git && pip install -r requirements.txt && git clone https://github.com/ShelbyJenkins/langchain && cd langchain && pip install -e .",
     "customizations": {
 		"vscode": {
 			"extensions": [
 				"genieai.chatgpt-vscode",
-				"ms-python.python"
+				"ms-python.python",
+				"github.vscode-pull-request-github"
 			]
 		}
-	}
+	} 
+
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
 
@@ -23,5 +25,4 @@
 	// "customizations": {}, 
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
 }
