--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==23.1.0
+bs4==0.0.1
 certifi==2023.5.7
 charset-normalizer==3.2.0
 click==8.1.4
@@ -13,7 +14,6 @@ frozenlist==1.3.3
 greenlet==2.0.2
 idna==3.4
 joblib==1.3.1
-langchainplus-sdk==0.0.20
 loguru==0.7.0
 marshmallow==3.19.0
 marshmallow-enum==1.5.1
@@ -23,6 +23,7 @@ mypy-extensions==1.0.0
 nltk==3.8.1
 numexpr==2.8.4
 numpy==1.25.1
+lxml==4.9.3
 openai==0.27.8
 openapi-schema-pydantic==1.2.4
 packaging==23.1
