--- a/app/prompt_templates/query_agent_doc_check_template.yaml
+++ b/app/prompt_templates/query_agent_doc_check_template.yaml
@@ -5,6 +5,7 @@
       Which of the following documents would be the most useful in answering the question?
       The document titles are numbered using 'title doc_number: [n]' notation.
       Select documents by specifying their doc_number.
+      If no relevant documents are found, return simply '0'.
       If multiple documents may be used, use '\n' chars to seperate your selections like:
       n
       n
