--- a/.github/workflows/personal_slack_build_deploy.yaml
+++ b/.github/workflows/personal_slack_build_deploy.yaml
@@ -6,83 +6,73 @@ jobs:
     docker:
         runs-on: ubuntu-latest
         env:
-            ### Services ###
+            ### Secrets ###
+            # Secrets in the format of '${{ secrets.NAME }}'
+            # Should be added be added to github secrets as 'NAME' 
+            STACKPATH_CLIENT_ID: ${{ secrets.STACKPATH_CLIENT_ID }}
+            STACKPATH_API_CLIENT_SECRET: ${{ secrets.STACKPATH_API_CLIENT_SECRET }}
+            OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+            PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
+            DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}
+            SLACK_BOT_TOKEN: ${{ secrets.PERSONAL_SPRITE_SLACK_BOT_TOKEN }}
+                            SLACK_APP_TOKEN: ${{ secrets.PERSONAL_SPRITE_SLACK_APP_TOKEN }}
+
+            ### Container Environment Variables ###
+            VECTORSTORE_INDEX: shelby-as-a-service
+            VECTORSTORE_ENVIRONMENT: us-central1-gcp
+            DOCUMENT_SOURCES_FILEPATH: index/personal_document_sources.yaml
+            VECTORSTORE_NAMESPACES: {'deepgram': 'Advanced AI services including, speech-to-text, translation, and sentiment analysis.', 'tatum': 'Blockchain and web3 infrastructure and services like RPC, NFTs, and Wallets. Supporting 70 blockchain networks with JS and C# SDKs, and an API.', 'stackpath': 'cloud infrastructure such as CDN, WAF, VMs, serverless javascript, and containers'}
+
+            ### Github Actions Environment Variables ###
             DOCKER_USERNAME: shelbyjenkins
             DOCKER_REGISTRY: docker.io
             DOCKER_SERVER: docker.io/shelbyjenkins/shelby-as-a-service
             DOCKER_IMAGE_PATH: shelbyjenkins/shelby-as-a-service:slack-latest
             STACKPATH_STACK_ID: shelby-stack-327b67
-
-            ### Services Secrets to be added to github secrets ###
-            STACKPATH_CLIENT_ID: ${{ secrets.STACKPATH_CLIENT_ID }}
-            STACKPATH_API_CLIENT_SECRET: ${{ secrets.STACKPATH_API_CLIENT_SECRET }}
-            OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-            PINECONE_API_KEY: ${{ secrets.PINECONE_API_KEY }}
-            DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}  
-
-            SLACK_BOT_TOKEN: ${{ secrets.PERSONAL_SPRITE_SLACK_BOT_TOKEN }}
-            SLACK_APP_TOKEN: ${{ secrets.PERSONAL_SPRITE_SLACK_APP_TOKEN }}
-
-            # Configs that may change based on deployment_target
             DEPLOYMENT_TARGET: slack
             WORKLOAD_NAME: shelby-as-a-service-personal-slack-sprite
-            WORKLOAD_SLUG: personal-slack-sprite
-            VECTORSTORE_NAMESPACES: '{"deepgram": "Advanced AI services including, speech-to-text, translation, and sentiment analysis.", "tatum": "blockchain and web3 infrastructure and services including JS and C# SDKs with support for 70 networks.", "stackpath": "cloud infrastructure such as CDN, WAF, VMs, serverless javascript, and containers"}'               
-
-            # Configs to be loaded into container env to overide config_agent
-            VECTORSTORE_INDEX: shelby-as-a-service
-            ACTION_LLM_MODEL: gpt-4
-            PRE_QUERY_LLM_MODEL: gpt-3.5-turbo
-            QUERY_LLM_MODEL: gpt-4
-            VECTORSTORE_TOP_K: 5
-            OPENAI_TIMEOUT_SECONDS: 180.0
-            MAX_DOCS_TOKENS: 3500
-            MAX_DOCS_USED: 5
-            MAX_RESPONSE_TOKENS: 300
-            SELECT_OPERATIONID_LLM_MODEL: gpt-4
-            CREATE_FUNCTION_LLM_MODEL: gpt-4
-            POPULATE_FUNCTION_LLM_MODEL: gpt-4
+            WORKLOAD_SLUG: personal-slack-sprite         
 
         steps:
             - name: Checkout code
-              uses: actions/checkout@v3
+            uses: actions/checkout@v3
 
             - name: Set up Python
-              uses: actions/setup-python@v2
-              with:
-                  python-version: '3.10.11'
+            uses: actions/setup-python@v2
+            with:
+                python-version: '3.10.11'
 
             - name: Cache pip dependencies
-              uses: actions/cache@v2
-              id: cache
-              with:
-                  path: ~/.cache/pip
-                  key: ${{  runner.os }}-pip-${{  hashFiles('**/app/deployment/slack/slack_requirements.txt') }}
-                  restore-keys: |
-                      ${{  runner.os }}-pip-
+            uses: actions/cache@v2
+            id: cache
+            with:
+                path: ~/.cache/pip
+                key: ${{  runner.os }}-pip-${{  hashFiles('**/app/deployment/slack/slack_requirements.txt') }}
+                restore-keys: |
+                    ${{  runner.os }}-pip-
 
             - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  if [ -f app/deployment/slack/slack_requirements.txt ]; then pip install -r app/deployment/slack/slack_requirements.txt; fi
+            run: |
+                python -m pip install --upgrade pip
+                if [ -f app/deployment/slack/slack_requirements.txt ]; then pip install -r app/deployment/slack/slack_requirements.txt; fi
 
             - name: Login to Docker registry
-              uses: docker/login-action@v2 
-              with:
-                  registry: docker.io
-                  username: shelbyjenkins
-                  password: ${{  secrets.DOCKER_TOKEN }}
+            uses: docker/login-action@v2 
+            with:
+                registry: docker.io
+                username: shelbyjenkins
+                password: ${{  secrets.DOCKER_TOKEN }}
 
             - name: Build and push Docker image
-              uses: docker/build-push-action@v4
-              with:
-                  context: .
-                  file: app/deployment/slack/Dockerfile
-                  push: true
-                  tags: shelbyjenkins/shelby-as-a-service:slack-latest
+            uses: docker/build-push-action@v4
+            with:
+                context: .
+                file: app/deployment/slack/Dockerfile
+                push: true
+                tags: shelbyjenkins/shelby-as-a-service:slack-latest
 
             - name: Add execute permissions to the script
-              run: chmod +x app/deployment/deploy_stackpath_container.py
+            run: chmod +x app/deployment/deploy_stackpath_container.py
 
             - name: Run deployment script
-              run: app/deployment/deploy_stackpath_container.py
+            run: app/deployment/deploy_stackpath_container.py
