--- a/.env template
+++ b/.env template
@@ -1,27 +1,10 @@
-OPENAI_API_KEY=
-PINECONE_API_KEY=
-PINECONE_ENV=
-
-# Docker
-DOCKER_USERNAME=
-DOCKER_TOKEN=
-# Stackpath
-STACKPATH_CLIENT_ID=
-STACKPATH_API_CLIENT_SECRET=
-
-# Change this as required
-PINECONE_INDEX=
-STACKPATH_STACK_ID=
-WORKLOAD_NAME=
-WORKLOAD_SLUG=
-DOCKER_IMAGE_PATH=
-
 
 ### Discord Sprite ###
-DISCORD_TOKEN=
+PERSONAL_DISCORD_OPENAI_API_KEY=
+PERSONAL_DISCORD_PINECONE_API_KEY=
+PERSONAL_DISCORD_BOT_TOKEN=
 
-### Slack Sprite ### 
-SLACK_BOT_TOKEN=
-SLACK_APP_TOKEN=
-
+### Web Sprite ###
+PERSONAL_WEB_OPENAI_API_KEY=
+PERSONAL_WEB_PINECONE_API_KEY=
 
