Creates base_class. Still much work to be done to complete.

--- a/app/deploy/test_deployment_config.yaml
+++ b/app/deploy/test_deployment_config.yaml
@@ -25,7 +25,7 @@ monikers:
             enabled_document_namespaces: ["deepgram", "tatum", "stackpath"]
   tatum:
     sprites:
-      slack:
+      discord:
             ### Set these to your needs ###
             # Requests method - at least one is required
             manual_requests_enabled:  True  # Manual allows for @discord-sprite engagement
