Saving changes. Not done.

--- a/app/deployments/test/test_config.yaml
+++ b/app/deployments/test/test_config.yaml
@@ -1,13 +1,75 @@
+Description: This file will define the deployment. It is used to generate a .env file
+  (with --create_template) that is use for local testing and for generating the github
+  actions workflow for container deployment. This field is unused.
 deployment_name: test
-moniker_level_variables: True
+moniker_level_variables: '# If you want to specify specific variables for your different
+  monikers, set this to true.'
 monikers:
-- name: personal
-  sprites:
-    discord: true
-    slack: false
-    web: false
-- name: tatum
-  sprites:
-    discord: true
-    slack: false
-    web: false
+  - name: personal # Your moniker/org/business/club add more if you require more than one instance of a discord/slack/web sprite.
+    enabled: true
+    sprites:
+      discord: true
+      slack: false
+      web: false
+    enabled_data_namespaces:
+      - stackpath
+      - tatum
+      - deepgram
+Index management description: Your data sources and index(es) will be configured here.
+  I suggest you configure your discord/slack/sprite first, and then attempt to add
+  documents. You can add more data sources as you like. See documentation for complete
+  list of options.
+index_names:
+  - index_name: "shelby-as-a-service"
+    document_namespaces:
+      - document_namespace: "deepgram"
+        description: "Advanced AI services including, speech-to-text, translation, and sentiment analysis."
+        resources:
+          - source: "developers.deepgram.com/reference"
+            update_enabled: True
+            target_url: "index/inputs/input_open_api_specs/deepgram"
+            target_type: "open_api_spec"
+            doc_type: "hard"
+            api_url_format: "https://developers.deepgram.com/reference/{operationId}"
+          - source: "developers.deepgram.com/docs"
+            update_enabled: True
+            target_url: "https://developers.deepgram.com/sitemap.xml"
+            filter_url: "https://developers.deepgram.com/docs/"
+            target_type: "sitemap"
+            doc_type: "soft"
+      - document_namespace: "tatum"
+        description: "Blockchain and web3 infrastructure and services like RPC, NFTs, and Wallets. Supporting 70 blockchain networks with JS and C# SDKs, and an API."
+        resources:
+          - source: "docs.tatum.com"
+            update_enabled: True
+            load_all_paths: True
+            target_url: "https://docs.tatum.com"
+            target_type: "gitbook"
+            doc_type: "soft"
+          - source: "docs.tatum.io"
+            update_enabled: True
+            load_all_paths: True
+            target_url: "https://docs.tatum.io"
+            target_type: "gitbook"
+            doc_type: "soft"
+          - source: "api.tatum.io"
+            update_enabled: True
+            target_url: "index/inputs/input_open_api_specs/tatum"
+            target_type: "open_api_spec"
+            doc_type: "hard"
+            api_url_format: "https://apidoc.tatum.io/tag/{tag}#operation/{operationId}"
+      - document_namespace: "stackpath"
+        description: "cloud infrastructure such as CDN, WAF, VMs, serverless javascript, and containers"
+        resources:
+          - source: "stackpath.dev/docs"
+            enabled: True
+            target_url: "https://stackpath.dev/docs"
+            target_type: "generic"
+            doc_type: "soft"
+          - source: "stackpath.dev/reference"
+            enabled: True
+            target_url: "index/inputs/input_open_api_specs/stackpath"
+            target_type: "open_api_spec"
+            doc_type: "hard"
+            api_url_format: "https://stackpath.dev/reference/{operationId}"
+
