--- a/app/deployments/template/template_config.yaml
+++ b/app/deployments/template/template_config.yaml
@@ -1,4 +1,4 @@
-# This file will define the deployment.
+# This file will define the deployment.env file. If you want to update it later and add monikers, I suggest doing so manually here.
 deployment_name: template
 monikers:
   - name: personal # Monikers are a name for people, clubs, chat rooms, businesses, and other organizations of people.
