Caught a mis-named variable.

--- a/deployments/test/requirements.txt
+++ b/deployments/test/requirements.txt
@@ -1,45 +1,47 @@
-nltk==3.8.1
-certifi==2023.5.7
-loguru==0.7.0
-openai==0.27.8
-packaging==23.1
-async-timeout==4.0.2
-joblib==1.3.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-discord.py==2.3.1
-greenlet==2.0.2
-git+https://github.com/ShelbyJenkins/langchain
-attrs==23.1.0
-requests==2.31.0
-tqdm==4.65.0
-multidict==6.0.4
-numpy==1.25.1
-tenacity==8.2.2
-openapi-schema-pydantic==1.2.4
-mmh3==4.0.0
-dataclasses-json==0.5.9
 numexpr==2.8.4
-PyYAML==6.0
-frozenlist==1.3.3
-wget==3.2
-regex==2023.6.3
-dnspython==2.3.0
-marshmallow==3.19.0
-typing_extensions==4.7.1
-urllib3==2.0.3
-pydantic==1.10.11
-aiohttp==3.8.4
-marshmallow-enum==1.5.1
 tiktoken==0.4.0
-mypy-extensions==1.0.0
-langchainplus-sdk==0.0.20
-yarl==1.9.2
-charset-normalizer==3.2.0
-pinecone-client==2.2.2
-six==1.16.0
-SQLAlchemy==2.0.18
-idna==3.4
-aiosignal==1.3.1
+greenlet==2.0.2
+joblib==1.3.1
 click==8.1.4
+tqdm==4.65.0
+async-timeout==4.0.2
+nltk==3.8.1
+python-dateutil==2.8.2
+urllib3==2.0.3
+python-dotenv==1.0.0
+marshmallow-enum==1.5.1
+SQLAlchemy==2.0.18
+slack-sdk==3.21.3
+pinecone-client==2.2.2
+marshmallow==3.19.0
+regex==2023.6.3
+requests==2.31.0
+openapi-schema-pydantic==1.2.4
+six==1.16.0
+mypy-extensions==1.0.0
+pydantic==1.10.11
+attrs==23.1.0
+git+https://github.com/ShelbyJenkins/langchain
 typing-inspect==0.9.0
+numpy==1.25.1
+slack-bolt==1.18.0
+openai==0.27.8
+langchainplus-sdk==0.0.20
+discord.py==2.3.1
+typing_extensions==4.7.1
+dataclasses-json==0.5.9
+multidict==6.0.4
+certifi==2023.5.7
+PyYAML==6.0
+yarl==1.9.2
+packaging==23.1
+frozenlist==1.3.3
+charset-normalizer==3.2.0
+aiosignal==1.3.1
+loguru==0.7.0
+dnspython==2.3.0
+tenacity==8.2.2
+idna==3.4
+mmh3==4.0.0
+aiohttp==3.8.4
+wget==3.2
