Implements loading configs from .py

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ installed_packages.txt
 logs/
 .vscode/
 **/__pycache__/
-deployments/old
-deployments/*/index/*/*
+app/deployments/old
+app/deployments/*/index/*/*
 langchain/
