--- a/app/deployments/personal/index_description.yaml
+++ b/app/deployments/personal/index_description.yaml
@@ -5,13 +5,13 @@ data_domains:
     description: "Advanced AI services including, speech-to-text, translation, and sentiment analysis."
     sources:
       "developers.deepgram.com/reference":
-        update_enabled: True
+        update_enabled: False
         target_url: "app/deployments/template/index/inputs/input_open_api_specs/deepgram"
         target_type: "open_api_spec"
         doc_type: "hard"
         api_url_format: "https://developers.deepgram.com/reference/{operationId}"
       "developers.deepgram.com/docs":
-        update_enabled: True
+        update_enabled: False
         target_url: "https://developers.deepgram.com/sitemap.xml"
         filter_url: "https://developers.deepgram.com/docs/"
         target_type: "sitemap"
@@ -26,7 +26,7 @@ data_domains:
         target_type: "gitbook"
         doc_type: "soft"
       "docs-v3.tatum.io":
-        update_enabled: True
+        update_enabled: False
         load_all_paths: True
         target_url: "https://docs-v3.tatum.io/"
         target_type: "gitbook"
@@ -41,7 +41,7 @@ data_domains:
     description: "cloud infrastructure such as CDN, WAF, VMs, serverless javascript, and containers"
     sources:
       "stackpath.dev/docs":
-        update_enabled: True
+        update_enabled: False
         target_url: "https://stackpath.dev/docs"
         target_type: "generic"
         doc_type: "soft"
