--- a/app/deployments/tatum/index_description.yaml
+++ b/app/deployments/tatum/index_description.yaml
@@ -12,13 +12,13 @@ data_domains:
         target_type: "gitbook"
         doc_type: "soft"
       "docs-v3.tatum.io":
-        update_enabled: False
+        update_enabled: True
         load_all_paths: True
         target_url: "https://docs-v3.tatum.io/"
         target_type: "gitbook"
         doc_type: "soft"
       "api.tatum.io":
-        update_enabled: False
+        update_enabled: True
         target_url: "app/deployments/template/index/inputs/input_open_api_specs/tatum"
         target_type: "open_api_spec"
         doc_type: "hard"
